<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/etykieta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/etykieta"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gradeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/etykieta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etykieta">


        <RadioButton
            android:id="@+id/grade2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade2Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/grade3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade3Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/grade4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade4Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/grade5Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade5Button_text"
            android:textSize="14sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>